feat: install nextjs and tailwind
Install NestJS 12 & Tailwind CSS Framework

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
+# .estlintignore file
+.next
+dist
+node_modules/
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
 logs
 *.log
