--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apollo-server-micro": "^3.10.0",
+    "graphql": "^16.5.0",
     "mongoose": "^6.4.6",
     "next": "12.2.3",
     "react": "18.2.0",
