--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.14.3",
+    "@heroicons/react": "^1.0.6",
     "apollo-server-micro": "^3.10.0",
     "graphql": "^16.5.0",
     "mongoose": "^6.5.0",
@@ -18,6 +20,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
