--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.14.3",
     "@heroicons/react": "^1.0.6",
+    "@react-google-maps/api": "^2.12.1",
     "apollo-server-micro": "^3.10.0",
     "graphql": "^16.5.0",
     "mongoose": "^6.5.0",
