--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-autocomplete": "^2.7.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
