--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-google-maps/api": "^2.12.1",
     "apollo-server-micro": "^3.10.0",
     "graphql": "^16.5.0",
+    "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
     "mongoose": "^6.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
