--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.14.3",
+    "@heroicons/react": "^1.0.6",
+    "@react-google-maps/api": "^2.12.1",
     "apollo-server-micro": "^3.10.0",
     "graphql": "^16.5.0",
+    "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
     "mongoose": "^6.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-autocomplete": "^2.7.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
