--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/sandbox": "^0.2.1",
     "@googlemaps/js-api-loader": "^1.14.3",
     "@heroicons/react": "^1.0.6",
     "@react-google-maps/api": "^2.12.1",
+    "apollo-server": "^3.10.0",
     "apollo-server-micro": "^3.10.0",
+    "apollo-server-nextjs": "^3.0.1",
     "graphql": "^16.5.0",
+    "graphql-compose": "^9.0.8",
+    "graphql-compose-mongoose": "^9.7.1",
     "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
     "mongoose": "^6.5.0",
-    "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^12.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.0",
     "swr": "^1.3.0"
   },
