feat: graphql to events page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@apollo/sandbox": "^0.2.1",
     "@googlemaps/js-api-loader": "^1.14.3",
     "@heroicons/react": "^1.0.6",
