Add heroku script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "micro-cors": "^0.1.1",
     "mongoose": "^6.5.0",
     "next": "^12.2.4",
+    "next-auth": "^4.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.0",
