--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "next start -p $PORT",
     "lint": "next lint"
   },
-  "dependencies": {
+ "dependencies": {
     "@apollo/client": "^3.6.9",
     "@apollo/sandbox": "^0.2.1",
     "@auth0/nextjs-auth0": "^1.9.1",
@@ -19,6 +19,7 @@
     "@heroicons/react": "^1.0.6",
     "@react-google-maps/api": "^2.12.1",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.4",
     "apollo-server": "^3.10.0",
     "apollo-server-micro": "^3.10.0",
     "apollo-server-nextjs": "^3.0.1",
